# f1-telemetry

./: .gitignore  Cargo.toml  README.md  SilverStoneInner.txt  austria-inner.txt  austria-out.txt
application/: Cargo.toml  SilverStoneOuter.txt  austria.txt
application/src/: main.rs  ui.rs
application/src/app/: app_skeleton.rs  telemetry_viewer.rs
application/src/app/demo/: context_menu.rs  dancing_strings.rs  demo_app_windows.rs  drag_and_drop.rs  layout_test.rs  misc_demo_window.rs  mod.rs  multi_touch.rs  painting.rs  plot_demo.rs  scrolling.rs  sliders.rs  strip_demo.rs  table_demo.rs  tests.rs  text_edit.rs  widget_gallery.rs  window_options.rs  window_with_panels.rs
f1-game-client/: Cargo.toml
f1-game-client/src/: event_loop.rs  lib.rs
f1-game-client/src/event_loop/: event_loop.rs  mod.rs
f1-game-client/src/telemetry_data/: car_damage_data.rs  car_setup_data.rs  car_status_data.rs  car_telemetry_data.rs  event_data.rs  final_classification.rs  lap_data.rs  lobby_info.rs  mod.rs  motion_data.rs  motion_extended_data.rs  packet_header.rs  participant_data.rs  session_data.rs  session_history.rs  tyre_set_data.rs
gpt-to-speech/: Cargo.toml
gpt-to-speech/src/: main.rs
spoofer/: Cargo.toml
spoofer/src/: main.rs
src/: event_loop.rs  main.rs  ui.rs
src/app/: demos.rs  mod.rs  options_panel.rs
src/app/demo/: dancing_strings.rs  drag_and_drop.rs  layout_test.rs  misc_demo_window.rs  mod.rs  painting.rs  sliders.rs  strip_demo.rs  table_demo.rs  (+2 more)
src/telemetry_data/: car_damage_data.rs  car_telemetry_data.rs  lap_data.rs  mod.rs  motion_data.rs  packet_header.rs  session_history.rs
test-app/: Cargo.toml
test-app/src/: main.rs
