[package]
name = "f1-game-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
serde_json = "1.0.85"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
tokio = {version="1.15.0", features=["full"]}
async-std = "1.12.0"
futures = "0.3.23"
serde = {version = "1.0.144", features = ["derive"]}
serde-bytes-repr = "0.1.5"
bincode = "1.3.3"
serde-big-array = {version = "0.5.1"}
derivative = "2.2.0"
enum-map = { version = "2", features = ["serde"] }
unicode_names2 = { version = "0.5.0", default-features = false }
egui_extras = "0.19.0"
lazy_static = "*"
itertools = "*"
serde_repr = "*"

[profile.release]
opt-level = 3